--- a/index.nginx-debian.html
+++ b/index.nginx-debian.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+	<!DOCTYPE html>
 <html>
 <head>
 <title>Mamando rindo</title>
@@ -8,7 +8,7 @@
         margin: 0 auto;
         font-family: Tahoma, Verdana, Arial, sans-serif;
         font-size: 35px;
-        color: white;
+        color: black;
         background-image: url("https://www.albawaba.com/sites/default/files/styles/d08_standard/public/2020-12/Will%20She%20Accept%20the%20Invitation%20Mia%20Khalifa%20Is%20Invited%20To%20Visit%20Saudi%20Arabia%20Only%20if%20She%20Wears%20an%20Aba.jpg?h=8abcec71&itok=NjYVRkmU"); 
     }
 </style>
